z-index fixed

--- a/crt2.css
+++ b/crt2.css
@@ -114,6 +114,7 @@ form input[type=button]:hover{
     height: auto;
 }
 .wrapper{
+    z-index: 2;
     position: fixed;
     top: 0;
     left: 0;
@@ -178,7 +179,7 @@ form input[type=button]:hover{
     left: 0;
     width: 100%;
     height: 50px;
-    background: #080808;
+    background: #664229;
     border-radius: 50px;
     transform: scaleY(0);
     z-index: -1;
@@ -189,7 +190,7 @@ form input[type=button]:hover{
 
 }
 .wrapper ul li a:hover{
-    color: #664229;
+    color: #F2EEE6;
 }
 input{
     display: none;
