--- a/home.css
+++ b/home.css
@@ -197,6 +197,7 @@ input{
     height: auto;
 }
 .wrapper{
+    z-index: 2;
     position: fixed;
     top: 0;
     left: 0;
